--- a/frontend/i18n/de.json
+++ b/frontend/i18n/de.json
@@ -2,6 +2,7 @@
   "settings_button": "Einstellungen",
   "parental_block": "Inhalt gesperrt durch Kindersicherung",
   "epg_button": "Öffne EPG",
+  "protocol_button": "Protokoll anzeigen",
   "subtitle_button": "Untertitel",
   "audio_button": "Audio",
   "close_button": "Schließen",
