--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -2,6 +2,7 @@
   "settings_button": "Settings",
   "parental_block": "Content blocked by parental control",
   "epg_button": "Open EPG",
+  "protocol_button": "Show Protocol",
   "subtitle_button": "Subtitles",
   "audio_button": "Audio",
   "close_button": "Close",
