--- a/frontend/i18n/fi.json
+++ b/frontend/i18n/fi.json
@@ -2,6 +2,7 @@
   "settings_button": "Asetukset",
   "parental_block": "Lapsilukko estää ohjelman katsomisen",
   "epg_button": "Ohjelmaopas",
+  "protocol_button": "Näytä protokolla",
   "subtitle_button": "Tekstitys",
   "audio_button": "Ääniraita",
   "close_button": "Sulje",
