--- a/frontend/i18n/it.json
+++ b/frontend/i18n/it.json
@@ -3,6 +3,7 @@
   "parental_block": "Contenuto bloccato dal controllo genitori",
   "epg_button": "Apri EPG",
   "subtitle_button": "Sottotitoli",
+  "protocol_button": "Mostra Protocollo",
   "audio_button": "Audio",
   "close_button": "Chiudi",
   "pause_button": "Pausa",
