--- a/frontend/i18n/zh.json
+++ b/frontend/i18n/zh.json
@@ -2,6 +2,7 @@
   "settings_button": "设定",
   "parental_block": "被父母控制阻止",
   "epg_button": "节目指南",
+  "protocol_button": "显示协议",
   "subtitle_button": "字幕",
   "audio_button": "声音的",
   "close_button": "关闭",
